--- a/css/style.css
+++ b/css/style.css
@@ -366,7 +366,7 @@ section {
 .home-courses .slide {
   text-align: center;
   position: relative;
-  background: #f0fdfa;
+  background: #172df00a;
   overflow: hidden;
 }
 
